--- a/src/MemoryGame.css
+++ b/src/MemoryGame.css
@@ -26,6 +26,11 @@
     color: white;
   }
   
+  .selected {
+    background-color: yellow;
+    color: black;
+  }
+  
   .error {
     background-color: red;
     color: white;
